--- a/redis二次校验实现jwt“失效”.html
+++ b/redis二次校验实现jwt“失效”.html
@@ -304,7 +304,7 @@ span.cm-strikethrough { text-decoration: line-through; }
 /* 全局属性 */
 :root {
   --select-text-bg-color: #e49123;
-  --bg-color: #a5a9b3;
+  --bg-color: #b9b9b9;
   /*change background*/
   --text-color: #333333;
   /*change text color*/
@@ -460,7 +460,7 @@ span.cm-strikethrough { text-decoration: line-through; }
 } */
 
 #write strong {
-  color: #E49123;
+  color: #136ef7;
   font-weight: bold;
 }
 
@@ -489,8 +489,8 @@ span.cm-strikethrough { text-decoration: line-through; }
 #write a {
   text-decoration: none;
   font-weight: bold;
-  color: #E49123;
-  border-bottom: 1px solid #E49123;
+  color: #c94ae9;
+  border-bottom: 2px solid #c94ae9;
 }
 
 /* 分割线 */
